@@ -16,6 +16,9 @@
 #
 # History:
 #
+# lec	11/07/2016
+#	- TR12449/new journal : J Neurosci
+#
 # lec	08/19/2015
 #	- TR11963/new journal : Dis Model Mech
 #
@@ -203,6 +206,10 @@ journalsOxford = [
 
 journalsOther = [
 'EMBO J', 'J Invest Dermatol', 'Mol Psychiatry'
+]
+
+journalsJNeurosci = [
+'J Neurosci'
 ]
 
 def runreport(fp, assayType):
@@ -407,8 +414,97 @@ def runreport(fp, assayType):
     
     fp.write(CRT + 'Total J numbers: ' + str(count) + CRT*3)
 
+    #
+    # J Neurosci
+    #
+
+    fp.write(TAB + 'J Neurosci 6 month delay:' + CRT)
+    for j in journalsJNeurosci:
+        fp.write(2*TAB + j + CRT)
+    fp.write(2*CRT)
+
+    #
+    # journal6 = J Neurosci
+    #
+    journals6 = '\'' + string.join(journalsJNeurosci, '\',\'') + '\''
+
+    db.sql('''
+          select distinct a._Refs_key, a.creation_date 
+          into temporary table refs4
+          from GXD_Assay a, BIB_Refs b, ACC_Accession ac, 
+               IMG_Image i, IMG_ImagePane p
+          where a._AssayType_key %s in (1,2,3,4,5,6,8,9) 
+	        and a._ImagePane_key = p._ImagePane_key 
+                and p._Image_key = i._Image_key 
+                and i.xDim is NULL 
+                and a._Refs_key = b._Refs_key 
+	        and b.journal in (%s)
+                and a._Assay_key = ac._Object_key 
+                and ac._MGIType_key = 8 
+	        and exists (select 1 from MGI_Note n, MGI_NoteChunk c
+	        where i._Image_key = n._Object_key 
+	        and n._NoteType_key = 1023
+	        and n._MGIType_key = 9
+	        and n._Note_key = c._Note_key)
+          ''' % (assayType, journals6), None)
+
+    db.sql('''
+          insert into refs4
+          select distinct a._Refs_key, a.creation_date 
+          from GXD_Assay a, BIB_Refs b, ACC_Accession ac, 
+               GXD_Specimen g, GXD_ISResultImage_View r
+          where a._AssayType_key %s in (1,2,3,4,5,6,8,9) 
+	        and a._Assay_key = g._Assay_key 
+                and g._Specimen_key = r._Specimen_key 
+                and r.xDim is NULL 
+                and a._Refs_key = b._Refs_key 
+	        and b.journal in (%s)
+                and a._Assay_key = ac._Object_key 
+                and ac._MGIType_key = 8 
+	        and exists (select 1 from MGI_Note n, MGI_NoteChunk c
+	        where r._Image_key = n._Object_key 
+	        and n._NoteType_key = 1023
+	        and n._MGIType_key = 9
+	        and n._Note_key = c._Note_key)
+          ''' % (assayType, journals6), None)
+
+    db.sql('create index refs4_idx1 on refs4(_Refs_key)', None)
+
+    results = db.sql('''
+	    select distinct r._Refs_key, rtrim(i.figureLabel) as figureLabel
+	    from refs4 r, IMG_Image i
+	    where r._Refs_key = i._Refs_key
+	    ''', 'auto')
+    fLabels = {}
+    for r in results:
+        key = r['_Refs_key']
+        value = r['figureLabel']
+        if not fLabels.has_key(key):
+	    fLabels[key] = []
+        fLabels[key].append(value)
+
+    results = db.sql('''
+	select r._Refs_key, b.jnumID, b.short_citation 
+	from refs4 r, BIB_All_View b
+	where r._Refs_key = b._Refs_key 
+        order by r.creation_date, b.jnumID
+	''', 'auto')
+
+    count = 0
+    refprinted = []
+    for r in results:
+        if r['_Refs_key'] not in refprinted:
+            fp.write(TAB + string.ljust(r['jnumID'], 12))
+            fp.write(string.ljust(r['short_citation'], 75))
+            fp.write(string.ljust(string.join(fLabels[r['_Refs_key']], ','), 50) + CRT)
+	    refprinted.append(r['_Refs_key'])
+	    count = count + 1
+    
+    fp.write(CRT + 'Total J numbers: ' + str(count) + CRT*3)
+
     db.sql('drop table refs',None)
     db.sql('drop table refs3',None)
+    db.sql('drop table refs4',None)
 
 #
 # main
