@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-6-6
+DATE: 11/08/2016
+STAFF: lec
+CHANGES: 
+TR12449/mgd/GXD_Images.py/J Neurosci
+
 TAG: qcreports_db-6-0-6-5
 DATE: 10/28/2016
 STAFF: sc
